--- a/app/src/main/res/layout/activity_category.xml
+++ b/app/src/main/res/layout/activity_category.xml
@@ -1,81 +1,191 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#0F283E"
     android:padding="16dp">
 
 
-
-    <Button
-        android:id="@+id/button_fiction"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#4D4B4B"
-        android:text="Ficción"
-        android:textColor="#FFFFFF" />
-
-    <Button
-        android:id="@+id/button_non_fiction"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/button_fiction"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#4D4B4B"
-        android:text="No Ficción"
-        android:textColor="#FFFFFF" />
-
     <!-- Nuevo botón para Historia -->
-    <Button
-        android:id="@+id/button_history"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/button_non_fiction"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#4D4B4B"
-        android:text="Historia"
-        android:textColor="#FFFFFF" />
 
     <!-- Nuevo botón para Misterio -->
-    <Button
-        android:id="@+id/button_mystery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/button_history"
-        android:layout_marginBottom="16dp"
-        android:backgroundTint="#4D4B4B"
-        android:text="Misterio"
-        android:textColor="#FFFFFF" />
+
+    <LinearLayout
+        android:id="@+id/linearLayout7"
+        android:layout_width="388dp"
+        android:layout_height="120dp"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/NombreTexto"
+                android:layout_width="278dp"
+                android:layout_height="match_parent"
+                android:text="Hola"
+                android:textColor="#FEFEFE"
+                android:textSize="34sp" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="100dp"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/logobibli" />
+        </LinearLayout>
+
+    </LinearLayout>
 
 
     <!-- Nuevo botón para Ciencia -->
-    <Button
-        android:id="@+id/button_science"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/button_mystery"
+
+    <ImageView
+        android:id="@+id/button_fiction"
+        android:layout_width="151dp"
+        android:layout_height="158dp"
+        android:layout_below="@+id/linearLayout7"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="19dp"
+        android:layout_marginTop="56dp"
         android:backgroundTint="#4D4B4B"
-        android:text="Ciencia"
-        android:textColor="#FFFFFF" />
+        app:srcCompat="@drawable/_78987566887" />
+
+    <ImageView
+        android:id="@+id/button_non_fiction"
+        android:layout_width="151dp"
+        android:layout_height="158dp"
+        android:layout_below="@+id/linearLayout7"
+        android:layout_alignEnd="@+id/linearLayout7"
+        android:layout_marginStart="58dp"
+        android:layout_marginTop="55dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="16dp"
+        android:layout_toEndOf="@+id/button_fiction"
+        android:backgroundTint="#4D4B4B"
+        app:srcCompat="@drawable/download" />
+
+    <ImageView
+        android:id="@+id/button_history"
+        android:layout_width="151dp"
+        android:layout_height="156dp"
+        android:layout_below="@id/button_non_fiction"
+        android:layout_alignStart="@+id/button_fiction"
+        android:layout_marginStart="-1dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginBottom="56dp"
+        android:backgroundTint="#4D4B4B"
+        app:srcCompat="@drawable/el_ltimo_emperador_thumb" />
+
+    <ImageView
+        android:id="@+id/button_mystery"
+        android:layout_width="157dp"
+        android:layout_height="158dp"
+        android:layout_below="@+id/button_non_fiction"
+        android:layout_marginStart="57dp"
+        android:layout_marginTop="22dp"
+        android:layout_marginBottom="16dp"
+        android:layout_toEndOf="@+id/button_history"
+        android:backgroundTint="#4D4B4B"
+        app:srcCompat="@drawable/diez_negritos" />
+
+    <ImageView
+        android:id="@+id/button_science"
+        android:layout_width="151dp"
+        android:layout_height="156dp"
+        android:layout_below="@id/button_mystery"
+        android:layout_alignStart="@+id/button_history"
+        android:layout_alignEnd="@+id/button_mystery"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="119dp"
+        android:backgroundTint="#4D4B4B"
+        app:srcCompat="@drawable/_0221101143306150" />
+
     <Button
         android:id="@+id/logout_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:backgroundTint="#4D4B4B"
-        android:text="Cerrar sesión"
-        android:layout_below="@id/button_science"
-        android:translationY="400px"
-   />
-    <LinearLayout
-        android:layout_width="395dp"
-        android:layout_height="394dp"
         android:layout_below="@+id/button_science"
-        android:layout_marginTop="1dp"
+        android:layout_alignEnd="@+id/button_science"
+        android:layout_marginTop="47dp"
+        android:layout_marginEnd="-3dp"
+        android:backgroundTint="#4D4B4B"
+        android:text="Cerrar sesión" />
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_fiction"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="69dp"
+        android:layout_marginTop="7dp"
+        android:text="Ficción"
+        android:textColor="#FEFEFE" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_non_fiction"
+        android:layout_alignEnd="@+id/linearLayout7"
+        android:layout_marginTop="-11dp"
+        android:layout_marginEnd="44dp"
+        android:text="No Ficción"
+        android:textColor="#FEFEFE" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_history"
+        android:layout_alignStart="@+id/linearLayout7"
+        android:layout_marginStart="67dp"
+        android:layout_marginTop="-50dp"
+        android:text="Historia"
+        android:textColor="#FEFEFE" />
+
+    <TextView
+        android:id="@+id/textView6"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_mystery"
+        android:layout_alignEnd="@+id/linearLayout7"
+        android:layout_marginTop="-11dp"
+        android:layout_marginEnd="44dp"
+        android:text="Misterio"
+        android:textColor="#FEFEFE" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/button_science"
+        android:layout_alignStart="@+id/linearLayout7"
+        android:layout_marginStart="172dp"
+        android:layout_marginTop="7dp"
+        android:text="Ciencia"
+        android:textColor="#FEFEFE" />
+
+    <LinearLayout
+        android:layout_width="382dp"
+        android:layout_height="57dp"
+        android:layout_below="@+id/linearLayout7"
+        android:layout_marginTop="-3dp"
         android:orientation="vertical">
 
-
-
+        <TextView
+            android:id="@+id/textView8"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:text="Categorias"
+            android:textAlignment="center"
+            android:textColor="#FEFEFE"
+            android:textSize="34sp"
+            android:textStyle="italic" />
     </LinearLayout>
 
 
